To resubmit LCR assignment_2 with all predictors

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "9f034a5d",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "6            70    usa          chevrolet impala  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "1b91233e",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "732784d8",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "399225f4",
    "metadata": {},
    "outputs": [],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "ac1e1117",
    "metadata": {},
    "outputs": [
@@ -643,16 +643,19 @@
      "output_type": "stream",
      "text": [
       "      predictor     slope  intercept\n",
-      "0    horsepower -0.058492  47.656416\n",
-      "1        weight -0.005716  47.656416\n",
-      "2  acceleration -0.055901  47.656416\n"
+      "0    horsepower -0.001899 -15.047371\n",
+      "1        weight -0.006457 -15.047371\n",
+      "2  acceleration  0.057588 -15.047371\n",
+      "3     cylinders -0.160143 -15.047371\n",
+      "4  displacement  0.000373 -15.047371\n",
+      "5    model_year  0.762270 -15.047371\n"
      ]
     }
    ],
    "source": [
     "lm = LinearRegression()\n",
     "\n",
-    "numeric_predictors = mpg_train[[\"horsepower\",\"weight\",\"acceleration\"]]\n",
+    "numeric_predictors = mpg_train[[\"horsepower\",\"weight\",\"acceleration\", \"cylinders\", \"displacement\", \"model_year\"]]\n",
     "\n",
     "lm.fit(numeric_predictors, mpg_train[\"mpg\"])\n",
     "\n",
@@ -685,23 +688,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.103015387179043"
+       "3.185474951339154"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mpg_test[\"predicted\"] = lm.predict(mpg_test[[\"horsepower\",\"weight\",\"acceleration\"]])\n",
+    "mpg_test[\"predicted\"] = lm.predict(mpg_test[[\"horsepower\",\"weight\",\"acceleration\", \"cylinders\", \"displacement\", \"model_year\"]])\n",
     "test_RMSPE = mean_squared_error(y_true=mpg_test[\"mpg\"], y_pred=mpg_test[\"predicted\"])**(1/2)\n",
     "test_RMSPE"
    ]
